# Rover-Unity

./: .gitignore  README.md  TileDownloader.cs
Assets/: ArmCameraOrbit.cs  ClosenessToCoordinateBar.cs  CurrentDestinationController.cs  DisableGameObjectOnWindows.cs  FadeOut.cs  GetMapMousePosition.cs  LocationsListController.cs  ManuallySetLocation.cs  MapController.cs  MapData.cs  MapLoader.cs  New Controls.inputactions  New Material 1.mat  ObjectTransparency.cs  PreloadedIcon.cs  PurePursuit.cs  RepositionIconManually.cs  RescaleGPSCircles.cs  RobotArmController.cs  RoverIconController.cs  RoverMapMarker.cs  RoverTrail.cs  SetWaypointButtonClick.cs  StartingIcons.cs  TabSelector.cs  TcpMessageReceiver.cs  UniversalRenderPipelineGlobalSettings.asset  WarningsPanelController.cs  WaypointAdder.cs  WaypointEditorPanel.cs  heightmap.csv  publishJointAngles.cs  streamListener.cs  urc map corners
Assets/Control Interface App/: Application.unity  Arm and Target.prefab  ArmCameraOrbit.cs  AutonomyObjectDetectionUI.cs  CameraControl.cs  CanvasController.cs  Circle.prefab  CurrentDestinationController.cs  Destination in list.prefab  FadeOut.cs  GPS circle.prefab  GameControls.cs  GpsLocation.cs  HeadingOffset.cs  MapData.cs  (+63 more)
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
ros2_ws/: arm_start_cams.sh  drive_start_cams.sh  manual_start_cams.sh  requirements.txt  start_tcp.sh
ros2_ws/src/AutonControlNode/: package.xml  setup.cfg  setup.py
ros2_ws/src/AutonControlNode/AutonControlNode/: auton_control_node.py
(+204 files in other folders)
