<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>AutonControlNode</name>
  <version>0.0.0</version>
  <description>Autonomous control node package</description>
  <maintainer email="matt@todo.todo">matt</maintainer>
  <license>TODO: License declaration</license>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Add dependency on your interface package -->
  <exec_depend>auton_control_interfaces</exec_depend>
  
  <!-- Standard ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
